--- a/index.html
+++ b/index.html
@@ -58,6 +58,75 @@
         </div>
     </div>
 
+     <!--SUGPON-->
+     <section id="sugpon">
+        <div class="container">
+            <h2 class="text-center">The branch difference</h2>
+            <div class="row row-cols-lg-4">
+                <div clas="col">
+                    <div class="card" syle="witdth: 18rem;">
+                        <img src="parrot.png" class="card-img-top  mx-auto" alt="...">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">card title</h5>
+                            <p class="card-text">Some quick exampke text to build on the card title and make up the bulk
+                                of the card's content</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div clas="col">
+                    <div class="card" syle="witdth: 18rem;">
+                        <img src="parrot.png" class="card-img-top mx-auto" alt="...">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">card title</h5>
+                            <p class="card-text">Some quick exampke text to build on the card title and make up the bulk
+                                of the card's content</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div clas="col">
+                    <div class="card" syle="witdth: 18rem;">
+                        <img src="parrot.png" class="card-img-top  mx-auto" alt="...">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">card title</h5>
+                            <p class="card-text">Some quick exampke text to build on the card title and make up the bulk
+                                of the card's content</p>
+                        </div>
+                    </div>
+                </div>
+                <div clas="col">
+                    <div class="card" syle="witdth: 18rem;">
+                        <img src="parrot.png" class="card-img-top mx-auto" alt="...">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">card title</h5>
+                            <p class="card-text">Some quick exampke text to build on the card title and make up the bulk
+                                of the card's content</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--ABOUT SECTION-->
+    <section id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <img src="images.jfif" alt="">
+                </div>
+                <div class="col-lg-6">
+                    <h2>Lorem ipsum dolor sit.</h2>
+                    <h3>Lorem ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora error cupiditate consequuntur,
+                        repellendus eos aliquam officia ab recusandae voluptatem, delectus quo rem asperiores dicta quos
+                        accusantium adipisci repellat mollitia facilis.</p>
+                </div>
+            </div>
+        </div>
+
+    </section>
 
 </body>
 
